fix cd in interactive mode
